<resources>
    <string name="app_name">Riker</string>
    <string name="title_activity_home">Riker</string>
    <string name="title_activity_records">Sets and Body Logs</string>
    <string name="title_activity_set_export_files">Set Export Files</string>
    <string name="title_activity_bml_export_files">Body Log Export Files</string>
    <string name="title_activity_account">Log In or Create Trial Account</string>
    <string name="title_activity_sign_up">90-day Trial Sign Up</string>
    <string name="title_activity_after_the_trial">Choices After Trial Period</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_enable_google_fit">Connect to Google Fit</string>
    <string name="title_activity_select_body_segment">Select Body Segment</string>
    <string name="title_activity_select_muscle_group">Select Muscle Group</string>
    <string name="title_activity_select_movement">Select Movement</string>
    <string name="title_activity_select_movement_variant">Select Movement Variant</string>
    <string name="title_activity_enter_reps">Enter Reps</string>
    <string name="title_activity_sets">Sets</string>
    <string name="title_activity_bml_view_details">Body Log Details</string>
    <string name="title_activity_bml_edit_details">Edit Body Log</string>
    <string name="title_activity_set_view_details">Set Details</string>
    <string name="title_activity_set_edit_details">Edit Set</string>
    <string name="title_activity_bmls">Body Logs</string>
    <string name="title_activity_muscle_groups_and_movements">Movements</string>
    <string name="title_activity_movement_detail">Movement Details</string>
    <string name="title_activity_profile_view_details">Profile and Settings</string>
    <string name="title_activity_profile_edit_details">Edit Profile and Settings</string>
    <string name="title_activity_general_info">General Info</string>
    <string name="title_activity_movements">Movements</string>
    <string name="title_activity_faq">Riker FAQ</string>
    <string name="title_activity_legal">Legal</string>
    <string name="title_activity_tos">Terms of Service</string>
    <string name="title_activity_privacy_policy">Privacy Policy</string>
    <string name="title_activity_security_policy">Security Policy</string>
    <string name="title_activity_what_to_measure">What to Measure?</string>
    <string name="title_activity_enter_body_weight">Enter Body Weight</string>
    <string name="title_activity_enter_arm_size">Enter Arm Size</string>
    <string name="title_activity_enter_chest_size">Enter Chest Size</string>
    <string name="title_activity_enter_calf_size">Enter Calf Size</string>
    <string name="title_activity_enter_waist_size">Enter Waist Size</string>
    <string name="title_activity_enter_thigh_size">Enter Thigh Size</string>
    <string name="title_activity_enter_forearm_size">Enter Forearm Size</string>
    <string name="title_activity_enter_neck_size">Enter Neck Size</string>
    <string name="title_activity_bml_add">Add Body Log</string>
    <string name="title_activity_chart_config">Chart Config</string>
    <string name="title_activity_workouts">Workouts</string>
    <string name="profile_default_weight_caption">The amount to increase or decrease the weight by when recording sets.</string>
    <string name="profile_default_weight_units_caption">Default units used when logging reps or your body weight.</string>
    <string name="profile_default_size_units_caption">Default units used when logging your arm size, chest size, etc.</string>
    <string name="set_weight_empty">Weight cannot be empty.</string>
    <string name="set_weight_number">Weight must be a number.</string>
    <string name="set_weight_positive">Weight must be a positive value.</string>
    <string name="set_reps_empty">Num reps cannot be empty.</string>
    <string name="set_reps_number">Num reps must be a number.</string>
    <string name="set_reps_positive">Num reps must be a positive value.</string>
    <string name="profile_weight_adjust_empty">Weight adjust cannot be empty.</string>
    <string name="profile_weight_adjust_number">Weight adjust must be a number.</string>
    <string name="profile_weight_adjust_positive">Weight adjust must be a positive value.</string>
    <string name="bml_body_weight_number">Body weight must be a number.</string>
    <string name="bml_body_weight_positive">Body weight must be a positive value.</string>
    <string name="bml_arm_size_number">Arm size must be a number.</string>
    <string name="bml_arm_size_positive">Arm size must be a positive value.</string>
    <string name="bml_chest_size_number">Chest size must be a number.</string>
    <string name="bml_chest_size_positive">Chest size must be a positive value.</string>
    <string name="bml_calf_size_number">Calf size must be a number.</string>
    <string name="bml_calf_size_positive">Calf size must be a positive value.</string>
    <string name="bml_thigh_size_number">Thigh size must be a number.</string>
    <string name="bml_thigh_size_positive">Thigh size must be a positive value.</string>
    <string name="bml_forearm_size_number">Forearm size must be a number.</string>
    <string name="bml_forearm_size_positive">Forearm size must be a positive value.</string>
    <string name="bml_waist_size_number">Waist size must be a number.</string>
    <string name="bml_waist_size_positive">Waist size must be a positive value.</string>
    <string name="bml_neck_size_number">Neck size must be a number.</string>
    <string name="bml_neck_size_positive">Neck size must be a positive value.</string>
    <string name="general_info_how_riker_dists_values" formatted="false"><![CDATA[<p>Every movement in Riker hits a set of muscles.&nbsp;&nbsp;There are <strong>primary muscles</strong> hit and <strong>secondary muscles</strong> hit.</p><p>For example, the primary muscles hit with <Strong>bench press</strong> are: the upper and lower chest muscles.&nbsp;&nbsp;The secondary muscles hit are: the three heads of the tricep muscle group.</p><p>Riker distributes <strong>80%</strong> of the total weight lifted and reps of a set to the primary muscles hit, and distributes the remaining <strong>20%</strong> to the secondary muscles hit.</p><p>If there are multiple primary muscles and multiple secondary muscles hit, the assigned weight and reps are distributed across them evenly.</p><p>So if you do a set of <strong>10 reps of 135 lbs</strong> on bench press, the total weight lifted is: <strong>1,350 lbs</strong>.&nbsp;&nbsp;80% of that weight (<strong>1,080 lbs</strong>) and 80% of the reps (<strong>8 reps</strong>) are assigned to the primary muscles; the upper and lower chest.&nbsp;&nbsp;Since there are 2 primary muscles hit, they are each assigned <strong>540 lbs and 4 reps</strong>.&nbsp;&nbsp;The secondary muscles hit are assigned 20% of the total weight lifted and reps (<strong>270 lbs and 2 reps</strong>).&nbsp;&nbsp;Since there are 3 secondary muscles hit (medial, lateral and long heads of the tricep), they are each assigned <strong>90 lbs and 0.67 reps</strong>.]]></string>
    <string name="google_fit_prompt" formatted="false"><![CDATA[<strong>Google Fit</strong> lets you control your fitness data from multiple apps and devices.<p>By connecting Google Fit and Riker, you can integrate your Riker workouts and body weight measurements to Google Fit.</p>]]></string>
    <string name="menu_action_view_entity_edit">Edit</string>
    <string name="menu_action_view_entity_delete">Delete</string>
    <string name="menu_action_edit_entity_done">Done</string>
    <string name="menu_action_edit_entity_cancel">Cancel</string>
    <string name="menu_action_chart_config_clear">Clear</string>
    <string name="menu_action_chart_config_clear_all">Clear All</string>
    <string name="menu_action_chart_config_done">Done</string>
    <string name="caption_ignore_time">Whether or not to track the time component (hour, minute and second) of when the set was recorded.</string>
    <string name="imported_at">This record was created as part of an import.</string>
    <string name="activity_records_header">From here you can drill into all of your data records.</string>
    <string name="activity_records_button_title_sets">Sets</string>
    <string name="activity_records_import_export_info_title">Import / Export</string>
    <string name="activity_set_records_import_export_info_msg"><![CDATA[<p>Riker supports importing and exporting of your set data.</p><p>After exporting, you\'ll be given the option to share the CSV file (e.g., you can email it to yourself or save it to Google Drive).&nbsp;&nbsp;Tap the <strong>Show Files</strong> button to see all your existing export files.</p><p>Tap <strong>Import</strong> to choose a set data file to import into Riker.]]></string>
    <string name="activity_bml_records_import_export_info_msg"><![CDATA[<p>Riker supports importing and exporting of your body measurement log data.</p><p>After exporting, you\'ll be given the option to share the CSV file (e.g., you can email it to yourself or save it to Google Drive).&nbsp;&nbsp;Tap the <strong>Show Files</strong> button to see all your existing export files.</p><p>Tap <strong>Import</strong> to choose a body log data file to import into Riker.]]></string>
    <string name="to_failure_info_title">To Failure</string>
    <string name="to_failure_info_msg">Did you do as many reps as possible?  Or did you have more in you?  If you had more reps in you, uncheck this.</string>
    <string name="negatives_info_title">Negatives</string>
    <string name="negatives_info_msg"><![CDATA[Slowly loading the weight in the \'down\' position of a movement, with a partner helping to bring the weight to the starting position.<div>Also known as eccentric training.</div>]]></string>
    <string name="realtime_info_title">Real Time</string>
    <string name="realtime_info_msg"><![CDATA[If you\'re using Riker to record your sets as you\'re actually working out, keep this checked, and Riker will record the timestamps of your sets automatically.<div>If you\'re using Riker to record your sets that you previously wrote down in a journal (you\'re digitizing your old data), then uncheck this box so you can manually enter the date.</div>]]></string>
    <string name="ignoretime_info_title">Ignore time of day</string>
    <string name="ignoretime_info_msg">Ignore the hour, minute and seconds part of the log date. Instead, just save the date.</string>
    <string name="riker_account_benefits_title">Riker Account Benefits</string>
    <string name="riker_account_benefits_msg"><![CDATA[<p>There are several benefits to having a Riker Account subscription:</p><h3>Syncable to all your devices</h3><p>With a Riker account, your data is syncable to all your devices, including: <ul><li>&nbsp;All your Android devices (including tablets)</li><li>&nbsp;iPhones and iPads</li><li></li><li>&nbsp;Web</li></ul></p><h3>Safe storage of your data</h3><p>With a Riker account, your data is safely and securely stored on our servers, making it accessible to all of your devices.</p><h3>Web access</h3><p>With a Riker account, you\'ll be able to access your data from the Riker web site.</p>]]></string>
    <string name="use_without_account_title">Riker without an Account?</string>
    <string name="use_without_account_msg"><![CDATA[<h3>Yes.  100% of Riker\'s features are available in the free phone and tablet apps.</h3><p>Without an account subscription, the app will store all of your data locally to your device.  The risk is if you lose your device, or you accidentally uninstall Riker, you would lose all your data (unless you back it up).  Without a subscription, there is no Riker web access.</p><p>That said, Riker\'s export / import functionality can be used to manually backup your data, or transfer it to another device.</p>]]></string>
</resources>